[package]
name = "pallet-lfs-user-data"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

[dependencies.sp-lfs-core]
path = "../../primitives/core"
default-features = false

[dependencies.pallet-lfs]
path = "../"
default-features = false

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.1.2' }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
system = { version = "2.0.0", default-features = false, package = 'frame-system', git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
impl-trait-for-tuples = "0.1.3"

[features]
default = ['std']
std = [
    'codec/std',
    'system/std',
    'frame-support/std',
    'pallet-lfs/std',
    'sp-std/std',
    'sp-lfs-core/std',
]
