[package]
name = "sp-lfs-cache"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

[dependencies.sp-lfs-core]
path = "../core"
default-features = false

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "d63ff7b9ac8d766b87a7a2cd99d5d73a521f97a9" }
sp-externalities = { optional = true, git = "https://github.com/paritytech/substrate", rev = "d63ff7b9ac8d766b87a7a2cd99d5d73a521f97a9" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "d63ff7b9ac8d766b87a7a2cd99d5d73a521f97a9" }


[features]
default = ["std"]
std = [
    "sp-externalities",
    "sp-std/std",
    "sp-runtime-interface/std",
    "sp-lfs-core/std",
]
