[package]
name = "sp-lfs-cache"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

[dependencies.sp-lfs-core]
path = "../core"
default-features = false

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
sp-externalities = { optional = true, git = "https://github.com/paritytech/substrate", rev = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }


[features]
default = ["std"]
std = [
    "sp-externalities",
    "sp-std/std",
    "sp-runtime-interface/std",
    "sp-lfs-core/std",
]
