[package]
name = "sp-lfs-core"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

[dependencies]
codec = { default-features = false, package = "parity-scale-codec", version = "1.1.2" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
]