[package]
name = "sp-lfs-core"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

[dependencies]
codec = { default-features = false, package = "parity-scale-codec", version = "1.1.2" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
]